force-app/main/default/objects/GLB_P1_Propuesta__c/GLB_P1_Propuesta__c.object-meta.xml
<CustomObject>
    <label>Propuesta</label>
    <nameField>
        <displayFormat>PRO-{000000}</displayFormat>
        <label>Propuesta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propuestas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>