force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_DireccionPagadorDuenioAuto__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_DireccionPagadorDuenioAuto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Dirección del pagador = dueño del auto?</label>
    <type>Checkbox</type>
</CustomField>