force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_EnrolamientoMandato__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_EnrolamientoMandato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolamiento mandato</label>
    <type>Checkbox</type>
</CustomField>