force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_FechaDocumento__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaDocumento__c</fullName>
    <label>Fecha documento</label>
    <type>Date</type>
</CustomField>