force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_FlujoCompletoPaso__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FlujoCompletoPaso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flujo completo en un paso</label>
    <type>Checkbox</type>
</CustomField>