force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Propuestas</relationshipLabel>
    <relationshipName>Propuestas</relationshipName>
    <type>Lookup</type>
</CustomField>