force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_PagadorMismoAsegurado__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PagadorMismoAsegurado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Pagador es el mismo que el asegurado?</label>
    <type>Checkbox</type>
</CustomField>