force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_PrecioPesosChileno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PrecioPesosChileno__c</fullName>
    <label>Precio pesos chileno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>