force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_QuienPagadorSeguro__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_QuienPagadorSeguro__c</fullName>
    <label>¿Quién es el pagador del seguro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asegurado</fullName>
            </value>
            <value>
                <fullName>Empleador</fullName>
            </value>
            <value>
                <fullName>Cónyuge</fullName>
            </value>
            <value>
                <fullName>p1</fullName>
                <isActive>false</isActive>
                <label>p1</label>
            </value>
            <value>
                <fullName>p2</fullName>
                <isActive>false</isActive>
                <label>p2</label>
            </value>
            <value>
                <fullName>p3</fullName>
                <isActive>false</isActive>
                <label>p3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>