force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_TipoSeguro__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_TipoSeguro__c</fullName>
    <label>Tipo de seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguro de Vida.</fullName>
            </value>
            <value>
                <fullName>Seguro de vida con ahorro (SVA)</fullName>
            </value>
            <value>
                <fullName>Seguro de Vida con Ahorro Previsional Voluntario (APV o APVC)</fullName>
            </value>
            <value>
                <fullName>Rentas Vitalicias Previsionales.</fullName>
            </value>
            <value>
                <fullName>Seguro de Salud.</fullName>
            </value>
            <value>
                <fullName>Seguro de Accidentes Personales.</fullName>
            </value>
            <value>
                <fullName>Seguro Obligatorio de Accidentes Personales (SOAP)</fullName>
            </value>
            <value>
                <fullName>TS1</fullName>
                <isActive>false</isActive>
                <label>TS1</label>
            </value>
            <value>
                <fullName>TS2</fullName>
                <isActive>false</isActive>
                <label>TS2</label>
            </value>
            <value>
                <fullName>TS3</fullName>
                <isActive>false</isActive>
                <label>TS3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>