force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_VigenciaDesde__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_VigenciaDesde__c</fullName>
    <label>Vigencia desde</label>
    <type>Date</type>
</CustomField>