force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLB_P1_VigenciaHasta__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_VigenciaHasta__c</fullName>
    <label>Vigencia hasta</label>
    <type>Date</type>
</CustomField>