force-app/main/default/objects/GLB_P1_Propuesta__c/fields/GLBP1_Bien_declarado__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Bien_declarado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bien declarado</label>
    <referenceTo>GLBP1_Bien_declarado__c</referenceTo>
    <relationshipLabel>Propuestas</relationshipLabel>
    <relationshipName>Propuestas</relationshipName>
    <type>Lookup</type>
</CustomField>